...
            "state": "translated",
            "value": "Agregar categoría"
          }
        }
      }
    },
    "Add column": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Agregar columna"
          }
...
            "state": "translated",
            "value": "Columna %lld"
          }
        }
      }
    },
    "Columns": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Columnas"
          }
...
            "state": "translated",
            "value": "Quita este filtro"
          }
        }
      }
    },
    "Rename": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Renombrar"
          }
        }
      }
    },
    "Rename column": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Renombrar columna"
          }
...
            "state": "translated",
            "value": "Pasó la fecha objetivo"
          }
        }
      }
    },
    "Task": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Tarea"
          }
...
            "state": "translated",
            "value": "Tarea · Completada"
          }
        }
      }
    },
    "Tasks": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Tareas"
          }
...
